<resources>
    <string name="app_name">Dine Discover</string>
    <string name="app_greeting">Your favourite meal, one Swipe away.</string>
    <string name="login">Login</string>
    <string name="createAccount">Don\'t have an account? Create one!</string>
    <string name="LoginPrompt">Already have an account? Login!</string>
    <string name="signup">Sign Up</string>
    <string name="profileSearchButtonStr">Discover new places</string>
    <string name="profileWishlistButtonStr">My Wishlist</string>
    <string name="profileVisitedButtonStr">My Visited Places</string>
    <string name="profileReviewsButtonStr">My Reviews</string>
    <string name="profileUpdateButtonStr">Update Profile</string>
    <string name="profileFollowingButtonStr">My Followed Places</string>
    <string name="discoveryDetailsStr">Details:</string>
    <string name="discoveryRestaurantNameTitle">Restaurant Name:</string>
    <string name="discoveryRestaurantNameText">Place</string>
    <string name="discoveryCuisineTitle">Cuisine:</string>
    <string name="discoveryCuisineText">Food</string>
    <string name="discoveryRatingTitle">Rating:</string>
    <string name="discoveryRatingText">5</string>
    <string name="discoveryAddressTitle">Address:</string>
    <string name="discoveryAddressText">23 meep Road</string>
    <string name="discoverySuburbTitle">Suburb:</string>
    <string name="discoverySuburbText">Meepfield</string>
    <string name="discoveryWishlistTitle">Number Wishlisted:</string>
    <string name="discoveryTotalWishlistedText">1</string>
    <string name="discoveryReviewsListTitle">Current rating:\nClick here for reviews. </string>
    <string name="discoveryReviewsNumText">(0)</string>
    <string name="wishlistHome">Looks yummy? Create your wishlist now!</string>
    <string name="searchQuestionHome">Looking for something specific?</string>
    <string name="searchButtonHome">Begin Discovery Now</string>
    <string name="searchQuestionSubtitleHome">Customised to your convenience and craving.</string>
    <string name="searchHint">Name, @Suburb</string>
    <string name="cuisineDropdownTitle">Cuisine:</string>
    <string name="ratingDropdownTitle">Rating:</string>
    <string name="searchBtnText">Enter</string>
    <string name="defaultTitle">Title</string>
    <string name="defaultSubtitle">Subtitle</string>
    <string name="featuredRestaurant1">Curry Corner</string>
    <string name="featuredRestaurantDesc1">Thai, Deakin</string>
    <string name="featuredRestaurant2">Taco Town</string>
    <string name="featuredRestaurantDesc2">Mexican, Weston Creek</string>
    <string name="featuredRestaurant3">Sushi World</string>
    <string name="featuredRestaurantDesc3">Japanese, Kingston</string>
    <string name="featuredRestaurant4">Pizza Paradise</string>
    <string name="featuredRestaurantDesc4">Italian, Tuggeranong</string>
    <string name="featuredRestaurant5">Burgers &amp; More</string>
    <string name="featuredRestaurantDesc5">American, Narrabundah</string>
    <string name="featuredRestaurantMore">See More</string>
    <string name="featuredRestaurantDescMore">View Complete Wishlist</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="view_ncomments">View\nComments</string>
    <string name="review">Review</string>
    <string name="wishlistRestaurantUrl">URL:</string>
    <string name="www_tacotaco_com">www.tacotaco.com</string>
    <string name="my_wishlist">My Wishlist</string>

</resources>