<?xml version="1.0" encoding="utf-8"?>
<!--Author: Holly Jacob-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainHeader"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linear_ll"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fffdfd"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentLeft="true"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="12sp"
                android:textStyle="normal"
                android:id="@+id/loginButton"
                android:layout_toStartOf="@id/signUpHomeButton"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/button_background_colour" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/signup"
                android:textSize="12sp"
                android:textStyle="normal"
                android:id="@+id/signUpHomeButton"
                android:backgroundTint="@color/button_background_colour" />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accentColor"
        android:layout_below="@+id/linear_ll"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"/>
</RelativeLayout>